--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,12 +1,13 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro"
-import BlogPost from "../../components/Blog/BlogPost.astro"
-import RssIcon from "../../components/ui/icons/RssIcon.astro"
-import { getCollection } from "astro:content"
-import { SITE } from "../../consts"
+import BaseLayout from '../../layouts/BaseLayout.astro'
+import BlogPost from '../../components/Blog/BlogPost.astro'
+import RssIcon from '../../components/ui/icons/RssIcon.astro'
+import { getCollection } from 'astro:content'
+import { SITE } from '../../consts'
 
-const blog = (await getCollection("blog")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+const blog = (await getCollection('blog')).sort(
+  (a, b) =>
+    b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 )
 ---
 
@@ -17,18 +18,26 @@ const blog = (await getCollection("blog")).sort(
   <meta slot="meta" name="robots" content="all" />
   <div class="max-w-screen-lorem mx-auto">
     <section class="pt-12 pb-14">
-      <div class="relative flex justify-between items-center">
-        <h1 class="text-5xl md:text-6xl font-bold text-textColor-primary">
+      <div
+        class="relative flex justify-between items-center"
+      >
+        <h1
+          class="text-5xl md:text-6xl font-bold text-textColor-primary"
+        >
           Blog
         </h1>
-        <a href="/rss.xml" target="_blank" class="border border-borderColor-gray rounded-lg w-9 h-9 flex items-center justify-center">
+        <a
+          href="/rss.xml"
+          target="_blank"
+          class="border border-borderColor-gray rounded-lg w-9 h-9 flex items-center justify-center"
+        >
           <RssIcon class="inline w-5 h-5" />
           <span class="sr-only">RSS</span>
         </a>
       </div>
     </section>
 
-    <article class="max-w-screen-md">
+    <article class="max-w-screen-md space-y-6">
       {
         blog.map((post) => (
           <BlogPost
@@ -37,6 +46,7 @@ const blog = (await getCollection("blog")).sort(
             description={post.data.description}
             date={post.data.pubDate}
             tags={post.data.tags}
+            mainImg={post.data.mainImg}
           />
         ))
       }
