--- a/src/components/Blog/BlogPost.astro
+++ b/src/components/Blog/BlogPost.astro
@@ -22,7 +22,7 @@ const { slug, date, title, description, tags, mainImg } =
       class="overflow-hidden block rounded-xl border border-borderColor-gray hover:border-borderColor-accent transition"
     >
       <article class="relative w-full group transition">
-        <div class="sm:absolute bg-background/80 backdrop-blur-sm group-hover:bg-background/90 py-6 px-4 top-0 left-0 rounded-xl flex flex-col h-full gap-y-3 z-20 transition-all">
+        <div class="sm:absolute bg-background/80 backdrop-blur-sm group-hover:bg-background/90 py-6 px-4 top-0 left-0 rounded-xl flex flex-col w-full h-full gap-y-3 z-20 transition-all">
           <div class="sm:flex sm:flex-row-reverse gap-x-8">
             <p class="sm:text-right sm:font-bold text-sm md:text-base">
               <FormattedDate date={date} />
@@ -31,9 +31,9 @@ const { slug, date, title, description, tags, mainImg } =
               <strong>{title}</strong>
             </p>
           </div>
-          <p class="flex-1 md:text-lg">
-            {description}
-          </p>
+          <div class="flex-1">
+            <p class="md:text-lg max-w-screen-sm">{description}</p>
+          </div>
           <ul class="flex w-full flex-wrap justify-start gap-x-2 gap-y-4">
             {tags.map((tag) => (
               <li>
@@ -68,7 +68,7 @@ const { slug, date, title, description, tags, mainImg } =
             <strong>{title}</strong>
           </p>
         </div>
-        <p class="flex-1 md:text-lg">{description}</p>
+        <p class="flex-1 md:text-lg max-w-screen-sm">{description}</p>
         <ul class="flex w-full flex-wrap justify-start gap-x-2 gap-y-4">
           {tags.map((tag) => (
             <li>
