--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -15,6 +15,10 @@
     @apply not-italic before:content-["—"];
   }
 
+  .option-btn {
+    @apply w-12 h-12 flex items-center justify-center hover:bg-button-light/60 hover:text-textColor-primary rounded-lg active:scale-90 transition-all;
+  }
+
   @keyframes contentShowUp {
     from {
       @apply blur-lg opacity-0 translate-y-6;
@@ -25,72 +29,78 @@
   }
 
   @font-face {
-    font-family: "Karla";
-    src: url("/fonts/karla-variable.woff2"), format("woff2");
+    font-family: 'Karla';
+    src: url('/fonts/karla-variable.woff2'), format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Karla";
-    src: url("/fonts/karla-regular.woff2"), format("woff2");
+    font-family: 'Karla';
+    src: url('/fonts/karla-regular.woff2'), format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Karla";
-    src: url("/fonts/karla-italic-variable.woff2"), format("woff2");
+    font-family: 'Karla';
+    src: url('/fonts/karla-italic-variable.woff2'),
+      format('woff2');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Pico8";
-    src: url("/fonts/pico-8-wide.ttf"), format("ttf");
+    font-family: 'Pico8';
+    src: url('/fonts/pico-8-wide.ttf'), format('ttf');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Cascadia";
-    src: url("/fonts/CascadiaCodePL-Regular.woff2"), format("woff2");
+    font-family: 'Cascadia';
+    src: url('/fonts/CascadiaCodePL-Regular.woff2'),
+      format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Source Serif Pro";
-    src: url("/fonts/source-serif-pro-regular.woff2"), format("woff2");
+    font-family: 'Source Serif Pro';
+    src: url('/fonts/source-serif-pro-regular.woff2'),
+      format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Source Serif Pro";
-    src: url("/fonts/source-serif-pro-600.woff2"), format("woff2");
+    font-family: 'Source Serif Pro';
+    src: url('/fonts/source-serif-pro-600.woff2'),
+      format('woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Source Serif Pro";
-    src: url("/fonts/source-serif-pro-700.woff2"), format("woff2");
+    font-family: 'Source Serif Pro';
+    src: url('/fonts/source-serif-pro-700.woff2'),
+      format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: "Source Serif Pro";
-    src: url("/fonts/source-serif-pro-italic.woff2"), format("woff2");
+    font-family: 'Source Serif Pro';
+    src: url('/fonts/source-serif-pro-italic.woff2'),
+      format('woff2');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
