--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,16 +1,16 @@
 ---
-import HeaderNav from "./HeaderNav.astro";
-import HeaderLink from "../HeaderLink.astro";
-import { URLS_MAP } from "../../consts";
-import ToggleTheme from "./ToggleTheme.astro";
-import FontToggle from "./FontToggle.astro";
-import FavIcon from "../ui/icons/FavIcon.astro";
+import HeaderNav from './HeaderNav.astro'
+import HeaderLink from '../HeaderLink.astro'
+import { URLS_MAP } from '../../consts'
+import ToggleTheme from './ToggleTheme.astro'
+import FontToggle from './FontToggle.astro'
+import FavIcon from '../ui/icons/FavIcon.astro'
 
 interface Props {
-  nav?: boolean;
+  nav?: boolean
 }
 
-const { nav = true } = Astro.props;
+const { nav = true } = Astro.props
 ---
 
 <div class="mb-[108px]">
@@ -27,7 +27,10 @@ const { nav = true } = Astro.props;
         <FavIcon class="pointer-events-none" />
         <span class="sr-only">Home</span>
       </a>
-      <menu class="flex gap-x-4 items-center text-textColor-secondary">
+      <menu
+        class="flex gap-x-4 items-center text-textColor-secondary"
+      >
+        <slot name="buttons" />
         <li>
           <FontToggle />
         </li>
@@ -43,7 +46,11 @@ const { nav = true } = Astro.props;
         {URLS_MAP.map(({ href, title }, index) => (
           <>
             <span class="text-textColor-secondary/80 hover:text-textColor-primary transition">
-              <HeaderLink href={href} title={title} class="px-6 py-2" />
+              <HeaderLink
+                href={href}
+                title={title}
+                class="px-6 py-2"
+              />
             </span>
             {URLS_MAP.length !== index + 1 && (
               <span class="select-none pb-2">|</span>
