--- a/src/components/Index/PostsByYear.astro
+++ b/src/components/Index/PostsByYear.astro
@@ -23,7 +23,7 @@ const years = Array.from(new Set(blogPosts.map((post) => post.year)))
 
 {
   years.map((year) => (
-    <article class="mb-12 mt-24 max-w-screen-sm">
+    <article class="mb-12 mt-24">
       <p class="text-xl md:text-2xl text-textColor-primary mb-4">
         <strong>
           <time>{year}</time>
