--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -59,7 +59,7 @@ const { Content, headings } = await post.render()
       <Metadata post={post} />
     </section>
     <article
-      class="prose prose-lorem prose-purple dark:prose-invert prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center prose-h2:pb-2 prose-h2:border-b prose-h2:border-b-borderColor-light md:prose-h2:text-center prose-h3:italic max-w-none"
+      class="prose prose-lorem prose-purple dark:prose-invert prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center md:prose-h2:text-center prose-h3:italic max-w-none"
       id="content"
     >
       <Content />
