--- a/src/components/Blog/TableOfContents.astro
+++ b/src/components/Blog/TableOfContents.astro
@@ -1,5 +1,5 @@
 ---
-import type { MarkdownHeading } from "astro"
+import type { MarkdownHeading } from 'astro'
 
 interface Props {
   headings: MarkdownHeading[]
@@ -27,10 +27,11 @@ for (const heading of headings) {
         <a
           class="block py-1 text-textColor-secondary hover:font-semibold hover:text-textColor-accent transition-colors"
           href={`#${slug}`}
-        >
-          {text}
-        </a>
-        {children.length ? <Astro.self headings={children} /> : null}
+          set:html={text}
+        ></a>
+        {children.length ? (
+          <Astro.self headings={children} />
+        ) : null}
       </li>
     ))
   }
